# ViamigoTravelAI

./: .env.example  .gitignore  .replit  ADMIN_CACHE_GUIDE.md  ADMIN_SUMMARY.md  AI_COMPANION_CONTEXT_FIX.md  APIFY_CACHING_ANALYSIS.md  APIFY_CACHING_SUMMARY.md  APIFY_COST_OPTIMIZATION.md  APIFY_OPTIMIZATION.md  APIFY_PRIORITY_FINAL_ANALYSIS.md  ATTRACTION_IMAGES_INTEGRATION_STATUS.md  BERGAMO_FIXES_TESTING.md  BUGFIXES_COMPLETE.md  CONTRIBUTING.md  CRITICAL_FINDINGS.md  CRITICAL_FIXES_COMPLETED.md  CRITICAL_ISSUES_STATUS.md  Complete_Missing_Cities.py  DATA_SOURCES_COMPARISON.md  Dockerfile  Extended_Safe_Data_Loader.py  FRONTEND_HOTELS_TODO.md  HOTELS_FRONTEND_PHASE1_COMPLETE.md  HOTELS_IMPLEMENTATION_GUIDELINES.md  HOTELS_INTEGRATION_GUIDE.md  HOTELS_INTEGRATION_SUCCESS.md  HOTELS_PHASE2_COMPLETE.md  HOTELS_PHASE3_COMPLETE.md  HOTELS_QUICK_REFERENCE.md  HUGGINGFACE_HOTEL_INTEGRATION.md  HuggingFace_DataSets_Insertion.py  IMAGES_INTEGRATION_FIX.md  IMAGES_WORKING_FINAL.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_SUMMARY.md  IMPORT_SUMMARY_2025-11-06.md  INTEGRATION_GUIDE.py  ISSUES_ANALYSIS.md  ITALIAN_CITIES_STATUS.md  (+171 more)
actor-tourism-it/: Dockerfile  README.md  apify.json.deprecated  requirements.txt
app/: __init__.py  config.py  models.py
attached_assets/: Pasted--AI-powered-planning-porto-olbia-Portorotondo-Using-cost-effective-scraping-for-genova-DEB-1756530752412_1756530752412.txt  Pasted--index-64-cdn-tailwindcss-com-should-not-be-used-in-production-To-use-Tailwind-CSS-in-production--1756367123091_1756367123092.txt  nuove_funzionalità_1756323744432.html  (+4 more)
(+39 files in other folders)
